--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.idea/
+/.idea/*
+/GU_JavaCoreProf_DZ.iml
+
