--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>ru.geekbrains.antionix</groupId>
     <artifactId>GU_JavaCoreProf_DZ</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>client</module>
+        <module>server</module>
+        <module>lesson02</module>
+    </modules>
 
     <build>
         <plugins>
@@ -35,4 +42,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.31.1</version>
+        </dependency>
+    </dependencies>
 </project>
